Fixes form sizing, login redirect, font-size on mobile

--- a/gagp/static/css/style.css
+++ b/gagp/static/css/style.css
@@ -190,3 +190,36 @@ hr.style1 {
     margin-right: auto;
     width: 75%;
 }
+
+
+@media screen and (min-width: 600px) {
+  .reg-form {
+    margin-left: 20%;
+    width: 50%;
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .post p {
+    font-size: 60%;
+  }
+  .attendees ul {
+    font-size:70%;
+  }
+  .card .card-title {
+    font-size:75%;
+  }
+  h1 {
+    font-size:85%;
+  }
+  h3  {
+    font-size:80%;
+  }
+  h4 {
+    font-size:70%
+  }
+  h5 {
+    font-size:60%;
+  }
+}
